deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: id-mapper-production
spec:
  selector:
    matchLabels:
      app: id-mapper
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: id-mapper
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/id-mapper:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "--preload", "-t", "150", "-k", "aiohttp.worker.GunicornWebWorker", "id_mapper.app:app"]
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
      - name: db
        image: neo4j:3.1
        imagePullPolicy: Always
        ports:
        - containerPort: 7474
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
        volumeMounts:
          - mountPath: "/data"
            name: id-mapper-production
      volumes:
        - name: id-mapper-production
          persistentVolumeClaim:
           claimName: id-mapper-production
