deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: id-mapper
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.dd-decaf.eu
    - api-staging.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: api.dd-decaf.eu
    http:
      paths:
      - path: /idmapping
        backend:
          serviceName: id-mapper-production
          servicePort: 80
